Attempt to fix large header on release docs
Last fix has minor diffs compared with master, which
do not cause a problem in local builds and
on their own do not look at all significant, but
re-applying files from master to overwrite those in
the 0.17.0 branch to ensure files are identical.

--- a/docs/stylesheets/oj9.css
+++ b/docs/stylesheets/oj9.css
@@ -81,7 +81,7 @@
 @media only screen and (max-width: 76.1875em) {
 
   html [data-md-color-primary=cyan] .md-nav--primary .md-nav__title--site {
-      background-color: #69c1bd;  /* cyan */
+      background-color: #353434;
   }
 
   [data-md-color-primary=cyan] .md-nav__source {
@@ -99,7 +99,7 @@
   text-align: center;
 }
 .md-logo img {
-  height: 45px;
+  width: 100px;
   /*margin-left:32rem;*/
 }
 
